Spacing fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -154,8 +154,6 @@ a:link, a:visited{
 	display: inline-block;
 	width: 100%;
 	background-color: #FFFFFF;
-	/* [disabled]min-width: 400px;
-*/
 	padding-bottom: 35px;
 	padding-top: 0px;
 	margin-top: -5px;
@@ -360,8 +358,8 @@ footer .footer_column p {
 }
 .footer_banner {
 	background-color: #B3B3B3;
-	padding-top: 60px;
-	padding-bottom: 60PX;
+	padding-top: 50px;
+	padding-bottom: 50PX;
 	margin-bottom: 0px;
 }
 footer {
